# moviepy-mcp

./: .coverage  .dockerignore  .gitignore  API_DOCS.md  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  Dockerfile  Dockerfile.backend  LICENSE  README.md  docker-compose.yml  fly.toml  pyproject.toml  start.sh
.gemini/: settings.json
docs/architecture/: system-design.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: Chat.tsx  Settings.tsx  ToolsPanel.tsx
frontend/src/lib/: api.ts
src/videoEditor_mcp/: main.py  mcp_server.py  schemas.py  video_utils.py
src/videoEditor_mcp/routers/: audio.py  video.py  video_edits.py
src/video_gen_service/: main.py  mcp_server.py  schemas.py  video_utils.py
src/video_gen_service/routers/: audio.py  compositing.py  video.py  video_edits.py
tests/: conftest.py  test_audio.py  test_compositing.py  test_error_handling.py  test_main.py  test_mcp_server.py  test_new_audio.py  test_new_video_edits.py  test_schemas.py  test_video_edits.py  test_video_utils.py
